# datajoint_symphony

./: README.md  err.txt  pyproject.toml
config/: datajoint_config.yaml  docker-compose.yaml
docs/: README.md  configuration.md  ingestion_guide.md  installation.md  migration_v2.md  query_guide.md  schema_reference.md  testing_guide.md
old/: app_refactored.py
scripts/: 01_connect.py  02_ingest_json.py  03_query_python.py  04_query_jupyter.ipynb  wait_for_mysql.sh
spec/: 00_overview.md  01_schema.md  02_ingestion.md  03_configuration.md  04_query_api.md  05_testing.md  README.md
spec/decisions/: 0001-uuid-primary-keys.md  0002-datajoint-v20-migration.md  0003-yaml-configuration.md  0004-pytest-docker-mysql.md  0005-drop-flask-rest.md
src/python/: app.py
src/python/symphony_dj/: __init__.py  __main__.py  cli.py  config.py  connection.py  h5io.py  ingest.py  query.py  schema.py  timestamps.py
tests/: conftest.py  test_config.py  test_ingest_integration.py  test_ingest_unit.py  test_invariants.py  test_query.py  test_schema.py  test_timestamps.py
tests/fixtures/: sample_dj.json  sample_tags.json
